# K-Ops

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  OPERATING_RULES.md  README.md  design.md  design_hyperextract_integration.md  pyproject.toml
.claude/: CLAUDE.md
.codex/: AGENTS.md
.gemini/: GEMINI.md
.obsidian/: app.json  core-plugins.json  templates.json
.serena/: project.yml
config/: kb_config.yaml  schema.yaml
data/: claims.json  contradictions.json  fetch_queue.json  scorecard.json  span_verification.json
docs/: DESIGN.md  DESIGN_PARTNERS.md  ROADMAP.md  TRUST_CONTRACT.md
kops/: answer_claim_map.py  atomic_claims.py  backfill_answer_quality.py  backfill_concept_quality.py  backfill_repo_manifests.py  backfill_source_anchors.py  backfill_source_metadata.py  backfill_source_notes.py  backfill_source_status.py  baselines.py  benchmark_report.py  bootstrap_kb.py  check_public_safe.py  check_source_drift.py  claim_registry.py  compile_large_source.py  consequence_gate.py  content_drift.py  context_package.py  contradiction_registry.py  distillation.py  entailment_judge.py  eval_metrics.py  eval_set_disjoint.py  evaluate_compilation.py  evidence_model.py  evidence_store.py  export_obsidian_vault.py  export_vault_index.py  extract_repo_symbols.py  feedback_loop.py  fetch_sources.py  generate_diagnostic_questions.py  generate_held_out_benchmark.py  generate_indexes.py  golden_eval.py  graph_community.py  graph_link_candidates.py  ingest_github_repo.py  ingest_sources.py  (+37 more)
notes/: Home.md  TODO.md  index.md
scripts/: backfill_answer_quality.py  format.py  (+52 more)
(+200 files in other folders)
