[project]
name = "K-Ops"
version = "0.1.0"
description = "Local, agent-first research pipeline for building a living Markdown knowledge vault."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pypdf>=5.0.0",
  "pyyaml>=6.0.0",
  "requests>=2.32.0",
  "trafilatura>=1.9.0",
]

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pyright>=1.1.410",
  "pytest>=8.0.0",
  "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["scripts"]
typeCheckingMode = "off"

[tool.mypy]
files = ["scripts", "tests"]
ignore_errors = true
python_version = "3.11"

[project.scripts]
k-ops = "scripts.kb:main"

[tool.uv]
package = false
